feat(inventory-reindex-records): Add API to publish reindex events for inventory records
* feat(inventory-reindex-records): Add API to publish reindex events for inventory records

Closes: MODINVSTOR-1230
(cherry picked from commit e9b093ed332252c417dae85d97da892a11d50c21)